--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -7,22 +7,36 @@
 
     <fragment
         android:id="@+id/FirstFragment"
-        android:name="io.ere.icacoe.kotlin.views.home.FirstFragment"
+        android:name="io.ere.icacoe.kotlin.views.home.HomeFragment"
         android:label="@string/first_fragment_label"
-        tools:layout="@layout/fragment_first">
+        tools:layout="@layout/fragment_home">
 
         <action
             android:id="@+id/action_FirstFragment_to_SecondFragment"
-            app:destination="@id/SecondFragment" />
+            app:destination="@id/SecondFragment"
+            app:enterAnim="@anim/slide_in"
+            app:popEnterAnim="@anim/slide_in" />
     </fragment>
     <fragment
         android:id="@+id/SecondFragment"
-        android:name="io.ere.icacoe.kotlin.views.home.SecondFragment"
+        android:name="io.ere.icacoe.kotlin.views.game.GameFragment"
         android:label="@string/second_fragment_label"
-        tools:layout="@layout/fragment_second">
-
+        tools:layout="@layout/fragment_game">
         <action
-            android:id="@+id/action_SecondFragment_to_FirstFragment"
-            app:destination="@id/FirstFragment" />
+            android:id="@+id/action_SecondFragment_to_ThirdFragment"
+            app:destination="@id/ThirdFragment"
+            app:enterAnim="@anim/slide_in"
+            app:popEnterAnim="@anim/slide_in" />
+    </fragment>
+    <fragment
+        android:id="@+id/ThirdFragment"
+        android:name="io.ere.icacoe.kotlin.views.score.ScoreFragment"
+        android:label="@string/third_fragment_label"
+        tools:layout="@layout/fragment_score">
+        <action
+            android:id="@+id/action_ThirdFragment_to_FirstFragment"
+            app:destination="@id/FirstFragment"
+            app:enterAnim="@anim/slide_in"
+            app:popEnterAnim="@anim/slide_in" />
     </fragment>
 </navigation>
