--- a/app/src/main/res/layout/fragment_game.xml
+++ b/app/src/main/res/layout/fragment_game.xml
@@ -6,23 +6,129 @@
     android:layout_height="match_parent"
     tools:context=".views.game.GameFragment">
 
-    <TextView
-        android:id="@+id/textview_second"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/title_scores"
-        app:layout_constraintBottom_toTopOf="@id/button_score"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
     <Button
         android:id="@+id/button_score"
-        android:layout_width="wrap_content"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:text="@string/continue_text"
+        android:layout_marginBottom="148dp"
+        android:background="@drawable/rounded_button"
+        android:text="@string/view_score"
+        android:textColor="@android:color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/textview_second" />
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="295dp"
+        android:layout_height="264dp"
+        tools:layout_editor_absoluteX="58dp"
+        tools:layout_editor_absoluteY="129dp">
+
+        <Button
+            android:id="@+id/button22"
+            android:layout_width="72dp"
+            android:layout_height="61dp"
+            android:text="Button"
+            app:layout_constraintBottom_toTopOf="@+id/button26"
+            app:layout_constraintStart_toEndOf="@+id/button32"
+            app:layout_constraintTop_toBottomOf="@+id/button20" />
+
+        <Button
+            android:id="@+id/button33"
+            android:layout_width="72dp"
+            android:layout_height="61dp"
+            android:layout_marginStart="72dp"
+            android:layout_marginEnd="40dp"
+            android:text="Button"
+            app:layout_constraintBottom_toTopOf="@+id/button26"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/button32"
+            app:layout_constraintTop_toBottomOf="@+id/button20"
+            app:layout_constraintVertical_bias="0.4" />
+
+        <Button
+            android:id="@+id/button32"
+            android:layout_width="72dp"
+            android:layout_height="61dp"
+            android:layout_marginStart="39dp"
+            android:text="Button"
+            app:layout_constraintBottom_toTopOf="@+id/button26"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/button20"
+            app:layout_constraintVertical_bias="0.4" />
+
+        <Button
+            android:id="@+id/button26"
+            android:layout_width="72dp"
+            android:layout_height="61dp"
+            android:layout_marginBottom="44dp"
+            android:text="Button"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/button24"
+            app:layout_constraintStart_toEndOf="@+id/button30"
+            app:layout_constraintTop_toBottomOf="@+id/button22" />
+
+        <Button
+            android:id="@+id/button30"
+            android:layout_width="72dp"
+            android:layout_height="61dp"
+            android:layout_marginStart="39dp"
+            android:layout_marginEnd="72dp"
+            android:layout_marginBottom="44dp"
+            android:text="Button"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/button24"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/button22" />
+
+        <Button
+            android:id="@+id/button24"
+            android:layout_width="72dp"
+            android:layout_height="61dp"
+            android:layout_marginEnd="40dp"
+            android:layout_marginBottom="44dp"
+            android:text="Button"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/button26" />
+
+        <Button
+            android:id="@+id/button20"
+            android:layout_width="72dp"
+            android:layout_height="61dp"
+            android:layout_marginTop="32dp"
+            android:text="Button"
+            app:layout_constraintBottom_toTopOf="@+id/button22"
+            app:layout_constraintEnd_toStartOf="@+id/button19"
+            app:layout_constraintStart_toEndOf="@+id/button28"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <Button
+            android:id="@+id/button28"
+            android:layout_width="72dp"
+            android:layout_height="61dp"
+            android:layout_marginStart="39dp"
+            android:layout_marginTop="32dp"
+            android:text="Button"
+            app:layout_constraintBottom_toTopOf="@+id/button32"
+            app:layout_constraintEnd_toStartOf="@+id/button20"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <Button
+            android:id="@+id/button19"
+            android:layout_width="72dp"
+            android:layout_height="61dp"
+            android:layout_marginTop="32dp"
+            android:layout_marginEnd="40dp"
+            android:text="Button"
+            app:layout_constraintBottom_toTopOf="@+id/button33"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/button20"
+            app:layout_constraintTop_toTopOf="parent" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
