--- a/app/src/main/res/layout/fragment_game.xml
+++ b/app/src/main/res/layout/fragment_game.xml
@@ -7,128 +7,150 @@
     tools:context=".views.game.GameFragment">
 
     <Button
-        android:id="@+id/button_score"
+        android:id="@+id/button_view_score"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="148dp"
+        android:layout_marginBottom="140dp"
         android:background="@drawable/rounded_button"
         android:text="@string/view_score"
         android:textColor="@android:color/white"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent" />
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <LinearLayout
+        android:id="@+id/linearLayout2"
         android:layout_width="295dp"
-        android:layout_height="264dp"
-        tools:layout_editor_absoluteX="58dp"
-        tools:layout_editor_absoluteY="129dp">
+        android:layout_height="265dp"
+        android:layout_marginTop="196dp"
+        android:gravity="center"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toTopOf="@+id/button_restart"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
-        <Button
-            android:id="@+id/button22"
-            android:layout_width="72dp"
-            android:layout_height="61dp"
-            android:text="Button"
-            app:layout_constraintBottom_toTopOf="@+id/button26"
-            app:layout_constraintStart_toEndOf="@+id/button32"
-            app:layout_constraintTop_toBottomOf="@+id/button20" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="62dp"
+            android:gravity="center"
+            android:orientation="horizontal">
 
-        <Button
-            android:id="@+id/button33"
-            android:layout_width="72dp"
-            android:layout_height="61dp"
-            android:layout_marginStart="72dp"
-            android:layout_marginEnd="40dp"
-            android:text="Button"
-            app:layout_constraintBottom_toTopOf="@+id/button26"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/button32"
-            app:layout_constraintTop_toBottomOf="@+id/button20"
-            app:layout_constraintVertical_bias="0.4" />
+            <Button
+                android:id="@+id/button"
+                android:layout_width="62dp"
+                android:layout_height="62dp"
+                android:layout_margin="4dp"
+                android:background="@drawable/rounded_button"
+                android:text="@string/empty"
+                android:textColor="@android:color/white" />
 
-        <Button
-            android:id="@+id/button32"
-            android:layout_width="72dp"
-            android:layout_height="61dp"
-            android:layout_marginStart="39dp"
-            android:text="Button"
-            app:layout_constraintBottom_toTopOf="@+id/button26"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/button20"
-            app:layout_constraintVertical_bias="0.4" />
+            <Button
+                android:id="@+id/button8"
+                android:layout_width="62dp"
+                android:layout_height="62dp"
+                android:layout_margin="4dp"
+                android:background="@drawable/rounded_button"
+                android:text="@string/empty"
+                android:textColor="@android:color/white" />
 
-        <Button
-            android:id="@+id/button26"
-            android:layout_width="72dp"
-            android:layout_height="61dp"
-            android:layout_marginBottom="44dp"
-            android:text="Button"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/button24"
-            app:layout_constraintStart_toEndOf="@+id/button30"
-            app:layout_constraintTop_toBottomOf="@+id/button22" />
+            <Button
+                android:id="@+id/button19"
+                android:layout_width="62dp"
+                android:layout_height="62dp"
+                android:layout_margin="4dp"
+                android:background="@drawable/rounded_button"
+                android:text="@string/empty"
+                android:textColor="@android:color/white" />
+        </LinearLayout>
 
-        <Button
-            android:id="@+id/button30"
-            android:layout_width="72dp"
-            android:layout_height="61dp"
-            android:layout_marginStart="39dp"
-            android:layout_marginEnd="72dp"
-            android:layout_marginBottom="44dp"
-            android:text="Button"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/button24"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/button22" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="62dp"
+            android:layout_margin="4dp"
+            android:gravity="center"
+            android:orientation="horizontal">
 
-        <Button
-            android:id="@+id/button24"
-            android:layout_width="72dp"
-            android:layout_height="61dp"
-            android:layout_marginEnd="40dp"
-            android:layout_marginBottom="44dp"
-            android:text="Button"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/button26" />
+            <Button
+                android:id="@+id/button2"
+                android:layout_width="62dp"
+                android:layout_height="62dp"
+                android:layout_margin="4dp"
+                android:background="@drawable/rounded_button"
+                android:text="@string/empty"
+                android:textColor="@android:color/white" />
 
-        <Button
-            android:id="@+id/button20"
-            android:layout_width="72dp"
-            android:layout_height="61dp"
-            android:layout_marginTop="32dp"
-            android:text="Button"
-            app:layout_constraintBottom_toTopOf="@+id/button22"
-            app:layout_constraintEnd_toStartOf="@+id/button19"
-            app:layout_constraintStart_toEndOf="@+id/button28"
-            app:layout_constraintTop_toTopOf="parent" />
+            <Button
+                android:id="@+id/button6"
+                android:layout_width="62dp"
+                android:layout_height="62dp"
+                android:layout_margin="4dp"
+                android:background="@drawable/rounded_button"
+                android:text="@string/empty"
+                android:textColor="@android:color/white" />
 
-        <Button
-            android:id="@+id/button28"
-            android:layout_width="72dp"
-            android:layout_height="61dp"
-            android:layout_marginStart="39dp"
-            android:layout_marginTop="32dp"
-            android:text="Button"
-            app:layout_constraintBottom_toTopOf="@+id/button32"
-            app:layout_constraintEnd_toStartOf="@+id/button20"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            <Button
+                android:id="@+id/button7"
+                android:layout_width="62dp"
+                android:layout_height="62dp"
+                android:layout_margin="4dp"
+                android:background="@drawable/rounded_button"
+                android:text="@string/empty"
+                android:textColor="@android:color/white" />
+        </LinearLayout>
 
-        <Button
-            android:id="@+id/button19"
-            android:layout_width="72dp"
-            android:layout_height="61dp"
-            android:layout_marginTop="32dp"
-            android:layout_marginEnd="40dp"
-            android:text="Button"
-            app:layout_constraintBottom_toTopOf="@+id/button33"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/button20"
-            app:layout_constraintTop_toTopOf="parent" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="62dp"
+            android:gravity="center"
+            android:orientation="horizontal">
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+            <Button
+                android:id="@+id/button3"
+                android:layout_width="62dp"
+                android:layout_height="62dp"
+                android:layout_margin="4dp"
+                android:background="@drawable/rounded_button"
+                android:text="@string/empty"
+                android:textColor="@android:color/white" />
+
+            <Button
+                android:id="@+id/button4"
+                android:layout_width="62dp"
+                android:layout_height="62dp"
+                android:layout_margin="4dp"
+                android:background="@drawable/rounded_button"
+                android:text="@string/empty"
+                android:textColor="@android:color/white" />
+
+            <Button
+                android:id="@+id/button5"
+                android:layout_width="62dp"
+                android:layout_height="62dp"
+                android:layout_margin="4dp"
+                android:background="@drawable/rounded_button"
+                android:text="@string/empty"
+                android:textColor="@android:color/white" />
+        </LinearLayout>
+    </LinearLayout>
+
+    <TextView
+        android:id="@+id/text_view_winner"
+        android:layout_width="164dp"
+        android:layout_height="32dp"
+        android:layout_marginTop="36dp"
+        android:layout_marginBottom="36dp"
+        android:gravity="center"
+        android:text="@string/blank_won"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toTopOf="@+id/button_view_score"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
+        app:layout_constraintVertical_bias="0.59" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
